# djan

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
my_project/: settings.py  urls.py
pastes/: models.py  views.py
pastes/management/commands/: clean_pastes.py
pastes/migrations/: 0001_initial.py
pastes/templates/pastes/: 404.html  500.html  create_paste.html  view_paste.html
