[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Erik <me@evicka.de>"]
readme = "README.md"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["my_project"]

[tool.flake8]
max-line-length = 88


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
mypy = "^1.14.0"
bandit = "^1.8.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
